; ModuleID = '/home/carl/AnghaBench/timescaledb/test/src/extr_adt_tests.c_uint64_vec_test.c'
source_filename = "/home/carl/AnghaBench/timescaledb/test/src/extr_adt_tests.c_uint64_vec_test.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32, i32, i32 }

@CurrentMemoryContext = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @uint64_vec_test to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @uint64_vec_test() #0 {
  %1 = alloca %struct.TYPE_6__, align 4
  %2 = alloca i32, align 4
  %3 = load i32, i32* @CurrentMemoryContext, align 4
  %4 = call i32 @uint64_vec_init(%struct.TYPE_6__* %1, i32 %3, i32 100)
  store i32 0, i32* %2, align 4
  br label %5

5:                                                ; preds = %12, %0
  %6 = load i32, i32* %2, align 4
  %7 = icmp slt i32 %6, 30
  br i1 %7, label %8, label %15

8:                                                ; preds = %5
  %9 = load i32, i32* %2, align 4
  %10 = add nsw i32 %9, 3
  %11 = call i32 @uint64_vec_append(%struct.TYPE_6__* %1, i32 %10)
  br label %12

12:                                               ; preds = %8
  %13 = load i32, i32* %2, align 4
  %14 = add nsw i32 %13, 1
  store i32 %14, i32* %2, align 4
  br label %5

15:                                               ; preds = %5
  %16 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %1, i32 0, i32 2
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @AssertInt64Eq(i32 %17, i32 30)
  %19 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %1, i32 0, i32 1
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @AssertInt64Eq(i32 %20, i32 100)
  store i32 0, i32* %2, align 4
  br label %22

22:                                               ; preds = %32, %15
  %23 = load i32, i32* %2, align 4
  %24 = icmp slt i32 %23, 30
  br i1 %24, label %25, label %35

25:                                               ; preds = %22
  %26 = load i32, i32* %2, align 4
  %27 = call i32* @uint64_vec_at(%struct.TYPE_6__* %1, i32 %26)
  %28 = load i32, i32* %27, align 4
  %29 = load i32, i32* %2, align 4
  %30 = add nsw i32 %29, 3
  %31 = call i32 @AssertInt64Eq(i32 %28, i32 %30)
  br label %32

32:                                               ; preds = %25
  %33 = load i32, i32* %2, align 4
  %34 = add nsw i32 %33, 1
  store i32 %34, i32* %2, align 4
  br label %22

35:                                               ; preds = %22
  %36 = call i32 @uint64_vec_free_data(%struct.TYPE_6__* %1)
  %37 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %1, i32 0, i32 2
  %38 = load i32, i32* %37, align 4
  %39 = call i32 @AssertInt64Eq(i32 %38, i32 0)
  %40 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %1, i32 0, i32 1
  %41 = load i32, i32* %40, align 4
  %42 = call i32 @AssertInt64Eq(i32 %41, i32 0)
  %43 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %1, i32 0, i32 0
  %44 = load i32, i32* %43, align 4
  %45 = call i32 @AssertPtrEq(i32 %44, i32* null)
  ret void
}

declare dso_local i32 @uint64_vec_init(%struct.TYPE_6__*, i32, i32) #1

declare dso_local i32 @uint64_vec_append(%struct.TYPE_6__*, i32) #1

declare dso_local i32 @AssertInt64Eq(i32, i32) #1

declare dso_local i32* @uint64_vec_at(%struct.TYPE_6__*, i32) #1

declare dso_local i32 @uint64_vec_free_data(%struct.TYPE_6__*) #1

declare dso_local i32 @AssertPtrEq(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
